# Talk-to-PDF

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
